Various improvements to examples annotations: - Now wrapped in a <pre> block to show exactly what is stored (though still needs to go through white_list to prevent script tags etc). - "Download" option to be able to open up the annotation value in a new window in a raw text format so it's easier to save or copy and paste.
git-svn-id: svn+ssh://rubyforge.org/var/svn/biocatalogue/trunk@1217 1acaf488-1b9d-4964-8077-0a2fdb83ef00

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -136,9 +136,7 @@ ul, quote, code, fieldset {
 }
 
 pre {
-	background-color: #EEEEEE;
-	padding: 1em;
-	font-size: 85%;
+
 }
 
 small {
